--- a/nginx.yml
+++ b/nginx.yml
@@ -3,7 +3,7 @@
   become: true
   tasks:
     - name: Installs nginx web server
-      apt: pkg=nginx state=present update_cache=true
+      yum: pkg=nginx state=present update_cache=true
       notify:
         - start nginx
 
