--- a/ansible-secrets.yml
+++ b/ansible-secrets.yml
@@ -2,7 +2,7 @@
   id: cd/ansible/secrets
   body:
     - &variables
-      - !variable github_username
+      - !variable nginx_private_key
     - !permit
       role: !group /cd/ansible/consumers
       privilege: [ read, execute ]
