--- a/nginx.yml
+++ b/nginx.yml
@@ -2,6 +2,11 @@
   hosts: nginx-host
   become: true
   tasks:
+    - name: Add epel-release repo
+    yum:
+      name: epel-release
+      state: present
+      
     - name: Installs nginx web server
       yum: pkg=nginx state=present update_cache=true
       notify:
