--- a/nginx.yml
+++ b/nginx.yml
@@ -10,3 +10,10 @@
   handlers:
     - name: start nginx
       service: name=nginx state=started
+- name: Gathering service facts
+  service_facts:
+
+- name: Get facts
+  debug:
+    msg:
+      - "{{ ansible_facts.services['nginx'].status }}"
