--- a/nginx.yml
+++ b/nginx.yml
@@ -5,11 +5,11 @@
     - name: Installs nginx web server
       yum: pkg=nginx state=latest
       notify:
-        - restart nginx
+        - start nginx
 
   handlers:
-    - name: start nginx
-      service: name=nginx state=started
+    - name: restart nginx
+      service: name=nginx state=restarted
       
     - name: Get facts
       debug:
