--- a/nginx.yml
+++ b/nginx.yml
@@ -10,6 +10,7 @@
   handlers:
     - name: restart nginx
       service: name=nginx state=restarted
+      sudo: yes
       
     - name: Get facts
       debug:
