--- a/nginx.yml
+++ b/nginx.yml
@@ -2,17 +2,21 @@
   hosts: nginx-host
   become: true
   tasks:      
-    - name: Installs nginx web server
-      yum: pkg=nginx state=latest
-      notify:
-        - start nginx
-
-  handlers:
-    - name: restart nginx
+    - name: Test for running nginx
+        shell: ps axuf|grep 'nginx'|grep -v "grep" | tr -d "\n" | cat
+        register: test_running_nginx
+        changed_when: False
+        tags: restart-nginx
+       
+    - name: First check the configuration
+      shell: /usr/sbin/nginx -t
+      register: test_nginx_config
+      when: test_running_nginx.stdout != ""
+      changed_when: False
+      ignore_errors: True
+      tags: restart-nginx
+           
+    - name: Restart nginx
       service: name=nginx state=restarted
-      sudo: yes
-      
-    - name: Get facts
-      debug:
-        msg:
-          - "{{ ansible_facts.services['nginx'].status }}"
+      when: test_running_nginx.stdout != "" and test_nginx_config.rc == 0
+      tags: restart-nginx
