--- a/hello_world.yml
+++ b/hello_world.yml
@@ -10,4 +10,4 @@
         msg: "Hello World!"
     - name: Display all variables/facts known for a host
       debug:
-        var: machine.username
+        var: machine
