--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,7 +1,6 @@
 - name: Hello World Sample
-  hosts: nginx-host
+  hosts: localhost
   vars:
-    toto: toto
     machine:
       username: '{{ ansible_user }}'
       password: '{{ ansible_password }}'
@@ -9,9 +8,6 @@
     - name: Hello Message
       debug:
         msg: "Hello World!"
-    - name: Display toto variable
-      debug:
-        var: toto
-    - name: Display all variables/facts known for a host
+    - name: Display machine
       debug:
         var: machine
