--- a/nginx.yml
+++ b/nginx.yml
@@ -1,22 +1,14 @@
 - name: nginx setup
   hosts: nginx-host
   become: true
+  
   tasks:
-    - name: Test for running nginx
-      shell: ps axuf|grep 'nginx'|grep -v "grep" | tr -d "\n" | cat
-      register: test_running_nginx
-      changed_when: False
-      tags: restart-nginx
+    - name: Install NGINX package
+      yum:
+        name: nginx
+        state: present
 
-    - name: First check the configuration
-      shell: /usr/sbin/nginx -t
-      register: test_nginx_config
-      when: test_running_nginx.stdout != ""
-      changed_when: False
-      ignore_errors: True
-      tags: restart-nginx
-
-    - name: Restart nginx
-      service: name=nginx state=restarted
-      when: test_running_nginx.stdout != "" and test_nginx_config.rc == 0
-      tags: restart-nginx
+    - name: Start NGINX service
+      service:
+        name: nginx
+        state: started
