--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 ## Conjur Configuration
-CONJUR_MASTER_HOSTNAME=bnl-conjur-lb-921e6c7491a103c6.elb.eu-west-2.amazonaws.com
+CONJUR_MASTER_HOSTNAME=conjur.demo.cybr
 CONJUR_MASTER_PORT=3000
-CONJUR_AUTHENTICATOR_ID=authn-jwt/jenkins
+CONJUR_ACCOUNT=devsecops
 
-## Sample secrets
-GIT_USER=thisisit
-GIT_PASS=toto
-TEAM1_PASS=toto
+## Conjur Configuration
+APP_GROUP=ansible-apps
 
 
